Feat : Update reponsive header__content

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -49,6 +49,9 @@
                         <button class="btn btn--secondary">Try for Free</button>
 
                     </div>
+                    <div class="nav__toggle">
+                        <span class="bars"></span>
+                    </div>
                 </nav>
             </div>
             <div class="header__carousel">
