Fix : Delete <br> card__text

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -69,7 +69,11 @@
             <li>
               <a class="list--mark item font--medium" href="#">
                 All Articles
-                <img class="shape"src="./img/header__Shape.png" alt="icon shape"/>
+                <img
+                  class="shape"
+                  src="./img/header__Shape.png"
+                  alt="icon shape"
+                />
               </a>
             </li>
             <li><a class="item font--medium" href="#">Sales</a></li>
@@ -94,9 +98,7 @@
           <div class="card__body">
             <h5 class="card__title">SERVICE</h5>
             <h1 class="card__text font--large">
-              CRM insights: Selecting <br />
-              the Right One for Your <br />
-              Organization
+              CRM insights: Selecting the Right One for Your Organization
             </h1>
             <h4 class="card__footer">
               05 Sep 2022, <span class="text--grey">by Joshua Nash</span>
