Note : change br heade__content

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -59,6 +59,7 @@
         <div class="header__carousel">
           <p class="carousel__content--above text--black font--large">
             New and insights <br />
+            <!-- delete br -->
             <span class="carousel__content--below text--grey"
               >form our experts</span
             >
