Fix : Fix header__carousel font, width responsive

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="header__carousel">
           <p class="carousel__content--above text--black font--large">
-            New and insights <br />
+            New and insights
             <span class="carousel__content--below text--grey"
               >form our experts</span
             >
