Fix : Fix card__body, card text service

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -97,7 +97,7 @@
         <div class="service-left card">
           <div class="card__body">
             <h5 class="card__title">SERVICE</h5>
-            <h1 class="card__text font--large">
+            <h1 class="card__text">
               CRM insights: Selecting the Right One for Your Organization
             </h1>
             <h4 class="card__footer">
