--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -19,62 +19,139 @@
     --------------------->
     <header class="header">
         <div class="container">
-            <div class="header__content">
-                <a href="#" class="logo">
-                    <img src="./img/logo.png" alt="logo">
-
-                </a>
-                <nav class="navbar text--black">
-                    <div class="nav__menu">
-                        <ul class="menu__list">
-                            <li class="list__item">
-                                <a class="item font--small" href="#">Product</a>
+            <nav class="header__content navbar navbar-expand-lg ">
+                <div class="container-fluid ">
+                    <a class="navbar-brand logo" href="#">
+                        <img src="./img/logo.png" alt="logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="nav__menu collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="menu__list navbar-nav ">
+                            <li class="list__item nav-item">
+                                <a class="item font--small nav-link " aria-current="page" href="#">Product</a>
                             </li>
-                            <li class="list__item">
-                                <a class="item font--small" href="#">Company</a>
+                            <li class="list__item nav-item">
+                                <a class="item font--small nav-link " href="#">Company</a>
                             </li>
-                            <li class="list__item">
-                                <a class="item font--small" href="#">Pricing</a>
+                            <li class="list__item nav-item">
+                                <a class="item font--small nav-link " href="#">Pricing</a>
                             </li>
-                            <li class="list__item">
-                                <a class="item font--small" href="#">Recourses</a>
+                            <li class="list__item nav-item">
+                                <a class="item font--small nav-link " href="#">Recourses</a>
                             </li>
-                            <li class="list__item">
-                                <a class="item font--small" href="#">Contact</a>
+                            <li class="list__item nav-item">
+                                <a class="item font--small nav-link " href="#">Contact</a>
                             </li>
                         </ul>
+                        <form class=" nav__button navbar-nav d-flex" role="button">
+                            <button class="btn btn--primary">Login</button>
+                            <button class="btn btn--secondary">Try for Free</button>
+                        </form>
                     </div>
-                    <div class="nav__button">
-                        <a href="__blank" class="btn btn--primary">Login</a>
-                        <button class="btn btn--secondary">Try for Free</button>
+                </div>
+            </nav>
 
-                    </div>
-                    <div class="nav__toggle">
-                        <span class="bars"></span>
-                    </div>
-                </nav>
-            </div>
             <div class="header__carousel">
                 <p class="carousel__content--above text--black font--large">New and insights <br>
                     <span class="carousel__content--below text--grey">form our experts</span>
                 </p>
             </div>
-            <div class="header__tab nav__menu">
-                <ul class="tab__menu  menu__list ">
-                    <li>
-                        <a class="list--mark item font--medium" href="#">
-                            All Articles
-                        <img class=shape src="./img/header__Shape.png" alt="icon shape">
-                        </a>
-
-                    </li>
-                    <li><a class="item font--medium" href="#">Sales</a></li>
-                    <li><a class="item font--medium" href="#">Marketing</a></li>
-                    <li><a class="item font--medium" href="#">Service</a></li>
-                    <li><a class="item font--medium" href="#">Product</a></li>
-                    <li><a class="item font--medium" href="#">News</a></li>
+            <div class="header__tab nav__menu ">
+                <ul
+                  class="tab__menu  menu__list nav nav-pills mb-3"
+                  id="pills-tab"
+                  role="tablist"
+                >
+                  <li class="list--mark item nav-item font--medium " role="presentation">
+                    <button
+                    class="nav-link active"
+                    id="pills-contact-tab"
+                    data-bs-toggle="pill"
+                    data-bs-target="#pills-contact"
+                    type="button"
+                    role="tab"
+                    aria-controls="pills-contact"
+                    aria-selected="false"
+                    >All Articles
+                    </button>
+                    <img class=shape src="./img/header__Shape.png" alt="icon shape">
+                  </li>
+                  <li class="nav-item item font--medium" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="pills-contact-tab"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    Sales
+                    </button>
+                  </li>
+                  <li class="nav-item item font--medium" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="pills-contact-tab"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    Marketing
+                    </button>
+                  </li>
+                  <li class="nav-item item font--medium" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="pills-contact-tab"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    Service
+                    </button>
+                  </li>
+                  <li class="nav-item item font--medium" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="pills-contact-tab"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    Product
+                    </button>
+                  </li>
+                  <li class="nav-item item font--medium" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="pills-contact-tab"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    New
+                    </button>
+                  </li>
                 </ul>
-            </div>
+              </div>
         </div>
     </header>
     <!-------------------
@@ -90,7 +167,7 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service-left card" >
+            <div class="service-left card">
                 <div class="card__body">
                     <h5 class="card__title">SERVICE</h5>
                     <h1 class="card__text font--large">CRM insights: Selecting <br>
@@ -355,20 +432,24 @@
                 <a href="#" class="logo">
                     <img src="./img/logo.png" alt="logo">
                 </a>
-                    <p class="font--small">
-                        We built an elegant solution.<br>
-                        Our team created a fully integrated sales<br>
-                        and marketing solution for SMBs</p>
-                 <ul class="media menu__list">
-                        <li>
-                            <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
-                        </li>
-                        <li>
-                            <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
-                        </li>
-                        <li>
-                            <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
-                    </ul>
+                <p class="font--small">
+                    We built an elegant solution.<br>
+                    Our team created a fully integrated sales<br>
+                    and marketing solution for SMBs</p>
+                <ul class="media menu__list">
+                    <li>
+                        <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
+                                alt="Here is a logo of the media above" class="media-icon"></a>
+                    </li>
+                    <li>
+                        <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png"
+                                alt="Here is a logo of the media above" class="media-icon"></a>
+                    </li>
+                    <li>
+                        <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png"
+                                alt="Here is a logo of the media above" class="media-icon"></a>
+                    </li>
+                </ul>
 
             </div>
             <div class="footer__content-right">
@@ -429,12 +510,11 @@
                     <li><a class="item" href="#">Cookies</a></li>
                 </ul>
                 <div class="rule__locale">
-                        <img src="./img/Shape.png" alt=" this is the icon for the change language button"
-                            class="btn__icon">
-                        <select class="btn--flex" name="language" id="language">
-                            <option value="volvo">English</option>
-                            <option value="saab">Vietnamese</option>
-                        </select>
+                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn__icon">
+                    <select class="btn--flex" name="language" id="language">
+                        <option value="volvo">English</option>
+                        <option value="saab">Vietnamese</option>
+                    </select>
                 </div>
             </div>
 
@@ -450,9 +530,13 @@
     <!-- Script -->
 
     <!-- jquery/thu vien ho tro -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
