--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -438,17 +438,13 @@
                     and marketing solution for SMBs</p>
                 <ul class="media menu__list">
                     <li>
-                        <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
-                                alt="Here is a logo of the media above" class="media-icon"></a>
+                        <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
                     </li>
                     <li>
-                        <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png"
-                                alt="Here is a logo of the media above" class="media-icon"></a>
+                        <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
                     </li>
                     <li>
-                        <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png"
-                                alt="Here is a logo of the media above" class="media-icon"></a>
-                    </li>
+                        <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
                 </ul>
 
             </div>
@@ -510,7 +506,8 @@
                     <li><a class="item" href="#">Cookies</a></li>
                 </ul>
                 <div class="rule__locale">
-                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn__icon">
+                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" 
+                        class="btn__icon">
                     <select class="btn--flex" name="language" id="language">
                         <option value="volvo">English</option>
                         <option value="saab">Vietnamese</option>
@@ -531,12 +528,9 @@
 
     <!-- jquery/thu vien ho tro -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
-        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
