--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -19,8 +19,8 @@
     --------------------->
     <header class="header">
         <div class="container">
-            <nav class="header__content navbar navbar-expand-lg ">
-                <div class="container-fluid ">
+            <nav class="header-navbar navbar navbar-expand-lg ">
+                <div class="container-fluid">
                     <a class="navbar-brand logo" href="#">
                         <img src="./img/logo.png" alt="logo">
                     </a>
@@ -29,22 +29,22 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="nav__menu collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="menu__list navbar-nav ">
-                            <li class="list__item nav-item">
-                                <a class="item font--small nav-link " aria-current="page" href="#">Product</a>
+                    <div class="nav-menu collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav-list navbar-nav ">
+                            <li class="nav-item">
+                                <a class="item navbar-text nav-link " aria-current="page" href="#">Product</a>
                             </li>
-                            <li class="list__item nav-item">
-                                <a class="item font--small nav-link " href="#">Company</a>
+                            <li class="nav-item">
+                                <a class="item navbar-text nav-link " href="#">Company</a>
                             </li>
-                            <li class="list__item nav-item">
-                                <a class="item font--small nav-link " href="#">Pricing</a>
+                            <li class="nav-item">
+                                <a class="item navbar-text nav-link " href="#">Pricing</a>
                             </li>
-                            <li class="list__item nav-item">
-                                <a class="item font--small nav-link " href="#">Recourses</a>
+                            <li class="nav-item">
+                                <a class="item navbar-text nav-link " href="#">Recourses</a>
                             </li>
-                            <li class="list__item nav-item">
-                                <a class="item font--small nav-link " href="#">Contact</a>
+                            <li class="nav-item">
+                                <a class="item navbar-text nav-link " href="#">Contact</a>
                             </li>
                         </ul>
                         <form class=" nav__button navbar-nav d-flex" role="button">
@@ -60,9 +60,9 @@
                     <span class="carousel__content--below text--grey">form our experts</span>
                 </p>
             </div>
-            <div class="header__tab nav__menu ">
+            <div class="header__tab nav-menu ">
                 <ul
-                  class="tab__menu  menu__list nav nav-pills mb-3"
+                  class="tab__menu  nav-list nav nav-pills mb-3"
                   id="pills-tab"
                   role="tablist"
                 >
