Feat : Header-navbar edit btn class

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -47,17 +47,17 @@
                                 <a class="item navbar-text nav-link " href="#">Contact</a>
                             </li>
                         </ul>
-                        <form class=" nav__button navbar-nav d-flex" role="button">
-                            <button class="btn btn--primary">Login</button>
-                            <button class="btn btn--secondary">Try for Free</button>
+                        <form class=" nav-button navbar-nav d-flex" role="button">
+                            <button class="btn btn-primary">Login</button>
+                            <button class="btn btn-secondary">Try for Free</button>
                         </form>
                     </div>
                 </div>
             </nav>
 
-            <div class="header__carousel">
-                <p class="carousel__content--above text--black font--large">New and insights <br>
-                    <span class="carousel__content--below text--grey">form our experts</span>
+            <div class="header-carousel">
+                <p class="carousel__content--above text-black font--large">New and insights <br>
+                    <span class="carousel__content--below text-black-50">form our experts</span>
                 </p>
             </div>
             <div class="header__tab nav-menu ">
