Feat : Header-carousel change class

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -56,8 +56,8 @@
             </nav>
 
             <div class="header-carousel">
-                <p class="carousel__content--above text-black font--large">New and insights <br>
-                    <span class="carousel__content--below text-black-50">form our experts</span>
+                <p class="text-black heading-lg">New and insights <br>
+                    <span class="text-black-50">form our experts</span>
                 </p>
             </div>
             <div class="header__tab nav-menu ">
