Feat : Header-tab change class

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -32,19 +32,19 @@
                     <div class="nav-menu collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav-list navbar-nav ">
                             <li class="nav-item">
-                                <a class="item navbar-text nav-link " aria-current="page" href="#">Product</a>
+                                <a class="item nav-text nav-link " aria-current="page" href="#">Product</a>
                             </li>
                             <li class="nav-item">
-                                <a class="item navbar-text nav-link " href="#">Company</a>
+                                <a class="item nav-text nav-link " href="#">Company</a>
                             </li>
                             <li class="nav-item">
-                                <a class="item navbar-text nav-link " href="#">Pricing</a>
+                                <a class="item nav-text nav-link " href="#">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="item navbar-text nav-link " href="#">Recourses</a>
+                                <a class="item nav-text nav-link " href="#">Recourses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="item navbar-text nav-link " href="#">Contact</a>
+                                <a class="item nav-text nav-link " href="#">Contact</a>
                             </li>
                         </ul>
                         <form class=" nav-button navbar-nav d-flex" role="button">
@@ -60,16 +60,14 @@
                     <span class="text-black-50">form our experts</span>
                 </p>
             </div>
-            <div class="header__tab nav-menu ">
+            <div class="header-tab nav-menu ">
                 <ul
-                  class="tab__menu  nav-list nav nav-pills mb-3"
-                  id="pills-tab"
+                  class="nav-tabs nav-list nav nav-pills mb-3"
                   role="tablist"
                 >
-                  <li class="list--mark item nav-item font--medium " role="presentation">
+                  <li class="nav-item item nav-text nav-mark " role="presentation">
                     <button
                     class="nav-link active"
-                    id="pills-contact-tab"
                     data-bs-toggle="pill"
                     data-bs-target="#pills-contact"
                     type="button"
@@ -80,10 +78,9 @@
                     </button>
                     <img class=shape src="./img/header__Shape.png" alt="icon shape">
                   </li>
-                  <li class="nav-item item font--medium" role="presentation">
+                  <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
-                      id="pills-contact-tab"
                       data-bs-toggle="pill"
                       data-bs-target="#pills-contact"
                       type="button"
@@ -94,10 +91,9 @@
                     Sales
                     </button>
                   </li>
-                  <li class="nav-item item font--medium" role="presentation">
+                  <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
-                      id="pills-contact-tab"
                       data-bs-toggle="pill"
                       data-bs-target="#pills-contact"
                       type="button"
@@ -108,10 +104,9 @@
                     Marketing
                     </button>
                   </li>
-                  <li class="nav-item item font--medium" role="presentation">
+                  <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
-                      id="pills-contact-tab"
                       data-bs-toggle="pill"
                       data-bs-target="#pills-contact"
                       type="button"
@@ -122,10 +117,9 @@
                     Service
                     </button>
                   </li>
-                  <li class="nav-item item font--medium" role="presentation">
+                  <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
-                      id="pills-contact-tab"
                       data-bs-toggle="pill"
                       data-bs-target="#pills-contact"
                       type="button"
@@ -136,10 +130,9 @@
                     Product
                     </button>
                   </li>
-                  <li class="nav-item item font--medium" role="presentation">
+                  <li class="nav-item item nav-text" role="presentation">
                     <button
                       class="nav-link"
-                      id="pills-contact-tab"
                       data-bs-toggle="pill"
                       data-bs-target="#pills-contact"
                       type="button"
