--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -8,8 +8,7 @@
     <title>Document</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- index CSS -->
     <link rel="stylesheet" href="./styles/index.css" />
 </head>
@@ -62,45 +61,90 @@
                 </p>
             </div>
             <div class="header-tab nav-menu ">
-                <ul class="nav-tabs nav-list nav nav-pills mb-3" role="tablist">
-                    <li class="nav-item item nav-text nav-mark " role="presentation">
-                        <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#pills-contact"
-                            type="button" role="tab" aria-controls="pills-contact" aria-selected="false">All Articles
-                        </button>
-                        <img class=shape src="./img/header__Shape.png" alt="icon shape">
-                    </li>
-                    <li class="nav-item item nav-text" role="presentation">
-                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
-                            role="tab" aria-controls="pills-contact" aria-selected="false">
-                            Sales
-                        </button>
-                    </li>
-                    <li class="nav-item item nav-text" role="presentation">
-                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
-                            role="tab" aria-controls="pills-contact" aria-selected="false">
-                            Marketing
-                        </button>
-                    </li>
-                    <li class="nav-item item nav-text" role="presentation">
-                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
-                            role="tab" aria-controls="pills-contact" aria-selected="false">
-                            Service
-                        </button>
-                    </li>
-                    <li class="nav-item item nav-text" role="presentation">
-                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
-                            role="tab" aria-controls="pills-contact" aria-selected="false">
-                            Product
-                        </button>
-                    </li>
-                    <li class="nav-item item nav-text" role="presentation">
-                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
-                            role="tab" aria-controls="pills-contact" aria-selected="false">
-                            New
-                        </button>
-                    </li>
+                <ul
+                  class="nav-tabs nav-list nav nav-pills mb-3"
+                  role="tablist"
+                >
+                  <li class="nav-item item nav-text nav-mark " role="presentation">
+                    <button
+                    class="nav-link active"
+                    data-bs-toggle="pill"
+                    data-bs-target="#pills-contact"
+                    type="button"
+                    role="tab"
+                    aria-controls="pills-contact"
+                    aria-selected="false"
+                    >All Articles
+                    </button>
+                    <img class=shape src="./img/header__Shape.png" alt="icon shape">
+                  </li>
+                  <li class="nav-item item nav-text" role="presentation">
+                    <button
+                      class="nav-link"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    Sales
+                    </button>
+                  </li>
+                  <li class="nav-item item nav-text" role="presentation">
+                    <button
+                      class="nav-link"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    Marketing
+                    </button>
+                  </li>
+                  <li class="nav-item item nav-text" role="presentation">
+                    <button
+                      class="nav-link"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    Service
+                    </button>
+                  </li>
+                  <li class="nav-item item nav-text" role="presentation">
+                    <button
+                      class="nav-link"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    Product
+                    </button>
+                  </li>
+                  <li class="nav-item item nav-text" role="presentation">
+                    <button
+                      class="nav-link"
+                      data-bs-toggle="pill"
+                      data-bs-target="#pills-contact"
+                      type="button"
+                      role="tab"
+                      aria-controls="pills-contact"
+                      aria-selected="false"
+                    >
+                    New
+                    </button>
+                  </li>
                 </ul>
-            </div>
+              </div>
         </div>
     </header>
     <!-------------------
@@ -116,21 +160,21 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service-left card">
-                <h5 class="card-header">SERVICE</h5>
-                <div class="card-body">
-                    <h1 class="card-text">
-                        CRM insights: Selecting the Right One for Your Organization
-                    </h1>
+            <div class="service-left card" >
+                <div class="card__body">
+                    <h5 class="card__title">SERVICE</h5>
+                    <h1 class="card__text font--large">CRM insights: Selecting <br>
+                        the Right One for Your <br>
+                        Organization</h1>
+                    <h4 class="card__footer">05 Sep 2022, <span class="text--grey">by Joshua Nash</span> </h4>
                 </div>
-                <h4 class="card-footer">
-                    05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
-                </h4>
             </div>
             <div class="service-right">
-                <img src="./img/service__img.png" alt="This is the service's photo" class="service-img">
+                <img src="./img/service__img.png" alt="This is the service's photo" class="service__img">
             </div>
         </div>
+
+
     </section>
 
     <!-------------------
@@ -381,24 +425,20 @@
                 <a href="#" class="logo">
                     <img src="./img/logo.png" alt="logo">
                 </a>
-                <p class="font--small">
-                    We built an elegant solution.<br>
-                    Our team created a fully integrated sales<br>
-                    and marketing solution for SMBs</p>
+                    <p class="font--small">
+                        We built an elegant solution.<br>
+                        Our team created a fully integrated sales<br>
+                        and marketing solution for SMBs</p>
                 <ul class="media menu__list">
-                    <li>
-                        <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
-                                alt="Here is a logo of the media above" class="media-icon"></a>
-                    </li>
-                    <li>
-                        <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png"
-                                alt="Here is a logo of the media above" class="media-icon"></a>
-                    </li>
-                    <li>
-                        <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png"
-                                alt="Here is a logo of the media above" class="media-icon"></a>
-                    </li>
-                </ul>
+                        <li>
+                            <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
+                        </li>
+                        <li>
+                            <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
+                        </li>
+                        <li>
+                            <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
+                    </ul>
 
             </div>
             <div class="footer__content-right">
@@ -459,10 +499,11 @@
                     <li><a class="item" href="#">Cookies</a></li>
                 </ul>
                 <div class="rule__locale">
-                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn__icon">
-                    <select class="btn--flex" name="language" id="language">
-                        <option value="volvo">English</option>
-                        <option value="saab">Vietnamese</option>
+                        <img src="./img/Shape.png" alt=" this is the icon for the change language button"
+                            class="btn__icon">
+                        <select class="btn--flex" name="language" id="language">
+                            <option value="volvo">English</option>
+                            <option value="saab">Vietnamese</option>
                     </select>
                 </div>
             </div>
@@ -479,13 +520,9 @@
     <!-- Script -->
 
     <!-- jquery/thu vien ho tro -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
-        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
