Fix  : service html

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -160,21 +160,21 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service-left card" >
-                <div class="card__body">
-                    <h5 class="card__title">SERVICE</h5>
-                    <h1 class="card__text font--large">CRM insights: Selecting <br>
-                        the Right One for Your <br>
-                        Organization</h1>
-                    <h4 class="card__footer">05 Sep 2022, <span class="text--grey">by Joshua Nash</span> </h4>
+            <div class="service-left card">
+                <h5 class="card-header">SERVICE</h5>
+                <div class="card-body">
+                    <h1 class="card-text">
+                        CRM insights: Selecting the Right One for Your Organization
+                    </h1>
                 </div>
+                <h4 class="card-footer">
+                    05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
+                </h4>
             </div>
             <div class="service-right">
-                <img src="./img/service__img.png" alt="This is the service's photo" class="service__img">
+                <img src="./img/service__img.png" alt="This is the service's photo" class="service-img">
             </div>
         </div>
-
-
     </section>
 
     <!-------------------
