--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -193,61 +193,85 @@
             <div class="product-content">
                 <div class="card card-img">
                     <h5 class="card-header">News</h5>
-                    <img src="./img/product__item1.png" alt="Here is a photo of the product title above"  class="card-img-top">
+                    <img src="./img/product__item1.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
-                        <h3 class="card-text">How To Deliver a Successful Product Launch</h3>
+                        <h3>
+                            <a class="card-text" href="#">
+                                How To Deliver a Successful Product Launch
+                            </a>
+                        </h3>
                     </div>
                     <h4 class="card-footer">29 Jun 2022,<span class="text--grey">by joshua Nash</span> </h4>
                 </div>
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item2.png" alt="Here is a photo of the product title above" class="card-img-top">
+                    <img src="./img/product__item2.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
-                        <h3 class="card-text">The best cities for sales careers in 2022</h3>
+                        <h3>
+                            <a class="card-text" href="#">
+                                The best cities for sales careers in 2022
+                            </a>
+                        </h3>
                     </div>
                     <h4 class="card-footer">20 Mar 2022, <span class="text--grey">by Bill Holloway</span></h4>
                 </div>
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item3.png" alt="Here is a photo of the product title above" class="card-img-top">
+                    <img src="./img/product__item3.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
-                        <h3 class="card-text">How to use 360 feedback to improve sales performance</h3>
+                        <h3>
+                            <a class="card-text" href="#">
+                                How to use 360 feedback to improve sales performance
+                            </a>
+                        </h3>
                     </div>
                     <h4 class="card-footer">07 Jun 2022, <span class="text--grey">by Stephen Henderson</span>
                 </div>
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item4.png" alt="Here is a photo of the product title above" class="card-img-top">
+                    <img src="./img/product__item4.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
-                        <h3 class="card-text">The Challenger Sale model: How to lead the conversation</h3>
+                        <h3>
+                            <a class="card-text" href="#">
+                                The Challenger Sale model: How to lead the conversation
+                            </a>
+                        </h3>
                     </div>
                     <h4 class="card-footer">09 Jan 2022,<span class="text--grey">by joshua Nash</span> </h4>
                 </div>
 
                 <div class="card card-img">
                     <h5 class="card-header">Product</h5>
-                    <img src="./img/product__item5.png" alt="Here is a photo of the product title above" class="card-img-top">
+                    <img src="./img/product__item5.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
-                        <h3 class="card-text">3 ways To automate your lead generation process with Yoora</h3>
+                        <h3>
+                            <a class="card-text" href="#">
+                                3 ways To automate your lead generation process with Yoora
+                            </a>
+                        </h3>
                     </div>
                     <h4 class="card-footer">08 Jul 2022, <span class="text--grey"> Leroy Figueroa</span> </h4>
                 </div>
 
                 <div class="card card-img">
                     <h5 class="card-header">Product</h5>
-                    <img src="./img/product__item6.png" alt="Here is a photo of the product title above" class="card-img-top">
+                    <img src="./img/product__item6.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
                     <div class="card-body">
-                        <h3 class="card-text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                        <h3>
+                            <a class="card-text" href="#">
+                                Marketplace Monthly Apps Spotlight: Aug 2022
+                            </a>
+                        </h3>
                     </div>
                     <h4 class="card-footer">05 Aug 2022,<span class="text--grey">by joshua Nash</span> </h4>
                 </div>
 
             </div>
-        </div>
-    </section>
+            </div>
+            </section>
     <!-------------------
      Product end
     --------------------->
