Feat :update Marketing card class

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -284,67 +284,69 @@
     --------------------->
     <section class="marketing">
         <div class="container">
-            <div class="marketing__content">
-                <div class="marketing-left card card__img">
-                    <div class="card__body">
-                        <h5 class="card__title">Marketing</h5>
-                        <div class="card__img-pic">
-                            <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above"
-                                class="marketing__pic">
+            <div class="marketing-content">
+                <div class="marketing-left ">
+                    <div class="card card-img">
+                        <h5 class="card-header">Marketing</h5>
+                        <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw" >
+                        <div class="card-body">
+                            <h3 class="card-text">
+                                Email marketing best practices: 10 experts share their email tips
+                            </h3>
                         </div>
-                        <h3 class="card__text">
-                            Email marketing best practices: 10 experts share their email tips
-                        </h3>
-                        <h4 class="card__footer">
+                        <h4 class="card-footer">
                             23 Nov 2022,
-                            <span class="text--grey">by joshua Nash</span>
+                            <span class="text-black-50">by joshua Nash</span>
                         </h4>
                     </div>
                 </div>
-                <div class="marketing-right card card--horizontal">
-                    <div class="card__body">
-                        <div class="card--horizontal-block">
-                            <h3 class="card__text">
-                                Access Yoora’s leads features on your mobile
-                            </h3>
-                            <h4 class="card__footer">
+
+                <div class="marketing-right ">
+                    <div class="card">
+                        <div class="card-horizontal">
+                            <div class="card-body">
+                                <h3 class="card-text">
+                                    Access Yoora’s leads features on your mobile
+                                </h3>
+                            </div>
+                            <h4 class="card-footer">
                                 11 Aug 2022,
-                                <span class="text--grey">by joshua Nash</span>
+                                <span class="text-black-50">by joshua Nash</span>
                             </h4>
                         </div>
-                        <div class="card--horizontal-block">
-                            <h5 class="card__title">PRODUCT</h5>
-                        </div>
+                        <h5 class="card-header">PRODUCT</h5>
                     </div>
-                    <div class="card__body">
-                        <div class="card--horizontal-block">
-                            <h3 class="card__text">
-                                Sales presentations: templates, examples and ideas on how to present like a pro
-                            </h3>
-                            <h4 class="card__footer">
+                    <div class="card">
+                        <div class="card-horizontal">
+                            <div class="card-body">
+                                <h3 class="card-text">
+                                    Sales presentations: templates, examples and ideas on how to present like a pro
+                                </h3>
+                            </div>
+                            <h4 class="card-footer">
                                 11 Oct 2022,
-                                <span class="text--grey"> by Laura Ryan</span>
+                                <span class="text-black-50"> by Laura Ryan</span>
                             </h4>
                         </div>
-                        <div class="card--horizontal-block">
-                            <h5 class="card__title">SALES</h5>
-                        </div>
+                        <h5 class="card-header">SALES</h5>
                     </div>
-                    <div class="card__body">
-                        <div class="card--horizontal-block">
-                            <h3 class="card__text"> How To Deliver a Successful <br>
-                                Product Launch</h3>
-                            <h4 class="card__footer">
+
+                    <div class="card">
+                        <div class="card-horizontal">
+                            <div class="card-body">
+                                <h3 class="card-text">
+                                    How To Deliver a Successful Product Launch
+                                </h3>
+                            </div>
+                            <h4 class="card-footer">
                                 30 Jan 2022,
-                                <span class="text--grey"> by Alice Washington</span>
+                                <span class="text-black-50"> by Alice Washington</span>
                             </h4>
                         </div>
-                        <div class="card--horizontal-block">
-                            <h5 class="card__title">NEWS</h5>
-                        </div>
+                        <h5 class="card-header">NEWS</h5>
                     </div>
                 </div>
-            </div>
+                </div>
 
         </div>
 
