Fix : Change article into products-section

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -359,52 +359,55 @@
 
 
     <!-------------------
-     BlogArticle section
+     Products-2 section
     --------------------->
-    <section class="Blog_Article">
+    <section class="product">
         <div class="container">
-            <div class="article__content card card__img">
-                <div class="card__body">
-                    <h5 class="card__title">SERVICE</h5>
-                    <div class="card__img-pic">
-                        <img src="./img/article__img1.png" alt="Here is a photo of the article title above"
-                            class="article__pic">
+            <div class="product-content">
+                <div class="card card-img">
+                    <h5 class="card-header">SERVICE</h5>
+                    <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="card-img-top"
+                        sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    <div class="card-body">
+                        <h3>
+                            <a class="card-text" href="#">
+                                Sales Funnels: Definition, Process, Stages and Examples
+                            </a>
+                        </h3>
                     </div>
-                    <h3 class="card__text">Sales Funnels: Definition, Process, Stages and Examples</h3>
-                    <h4 class="card__footer">
-                        29 Jun 2022,
-                        <span class="text--grey">by joshua Nash</span>
-                    </h4>
+                    <h4 class="card-footer">29 Jun 2022, <span class="text-black-50">by joshua Nash</span>
                 </div>
-                <div class="card__body">
-                    <h5 class="card__title">SALES</h5>
-                    <div class="card__img-pic">
-                        <img src="./img/article__img2.png" alt="Here is a photo of the article title above"
-                            class="article__pic">
+                <div class="card card-img">
+                    <h5 class="card-header">SALES</h5>
+                    <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="card-img-top"
+                        sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    <div class="card-body">
+                        <h3>
+                            <a class="card-text" href="#">
+                                What is a sales Yoora and how do you build one?
+                            </a>
+                        </h3>
                     </div>
-                    <h3 class="card__text">What is a sales Yoora and how do you build one?</h3>
-                    <h4 class="card__footer">
-                        29 Mar 2022,
-                        <span class="text--grey"> by Amanda Brooks</span>
-                    </h4>
+                    <h4 class="card-footer">29 Mar 2022,, <span class="text-black-50">by Amanda Brooks</span>
                 </div>
-                <div class="card__body">
-                    <h5 class="card__title">SERVICE</h5>
-                    <div class="card__img-pic">
-                        <img src="./img/article__img3.png" alt="Here is a photo of the article title above"
-                            class="article__pic">
+                <div class="card card-img">
+                    <h5 class="card-header">SERVICE</h5>
+                    <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="card-img-top"
+                        sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    <div class="card-body">
+                        <h3>
+                            <a class="card-text" href="#">
+                                10 real estate cold calling scripts to increase lead generation
+                            </a>
+                        </h3>
                     </div>
-                    <h3 class="card__text">10 real estate cold calling scripts to increase lead generation</h3>
-                    <h4 class="card__footer">
-                        27 Dec 2022,
-                        <span class="text--grey"> by Roxie Sandoval</span>
-                    </h4>
+                    <h4 class="card-footer"> 27 Dec 2022, <span class="text-black-50">by Roxie Sandoval</span>
                 </div>
             </div>
         </div>
     </section>
     <!-------------------
-     BlogArticle end
+     products-2end
     --------------------->
 
 
