Feat : Update marketing responsive

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -303,7 +303,6 @@
     <section class="marketing">
         <div class="container">
             <div class="marketing-content">
-                <div class="marketing-left ">
                     <div class="card card-img">
                         <h5 class="card-header">Marketing</h5>
                         <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw" >
@@ -317,11 +316,9 @@
                             <span class="text-black-50">by joshua Nash</span>
                         </h4>
                     </div>
-                </div>
 
-                <div class="marketing-right ">
-                    <div class="card">
-                        <div class="card-horizontal">
+                    <div class="card card-horizontal">
+                        <div class="card-horizontal-left">
                             <div class="card-body">
                                 <h3 class="card-text">
                                     Access Yoora’s leads features on your mobile
@@ -334,8 +331,8 @@
                         </div>
                         <h5 class="card-header">PRODUCT</h5>
                     </div>
-                    <div class="card">
-                        <div class="card-horizontal">
+                    <div class="card card-horizontal">
+                        <div class="card-horizontal-left">
                             <div class="card-body">
                                 <h3 class="card-text">
                                     Sales presentations: templates, examples and ideas on how to present like a pro
@@ -349,8 +346,8 @@
                         <h5 class="card-header">SALES</h5>
                     </div>
 
-                    <div class="card">
-                        <div class="card-horizontal">
+                    <div class="card card-horizontal">
+                        <div class="card-horizontal-left">
                             <div class="card-body">
                                 <h3 class="card-text">
                                     How To Deliver a Successful Product Launch
@@ -363,7 +360,6 @@
                         </div>
                         <h5 class="card-header">NEWS</h5>
                     </div>
-                </div>
                 </div>
 
         </div>
