Feat : update cta responsive

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -456,27 +456,29 @@
     <!-------------------
     CTA section
     --------------------->
-    <section class="cta">
-        <div class="container">
-            <div class="cta-content card">
-                <div class="card-body ">
-                    <h3 class="card-text ">
-                        <a class="card-text text-white heading-lg" href="#">
+    <section class="cta ">
+            <div class="cta-content card container">
+                <div class="card-body  ">
+                    <div class="card-text ">
+                        <h1 class="heading-lg" href="#">
+                            <a href="#" class="text-white">
                             Ready to supercharge your business?
-                        </a>
-                    </h3>
-                    <div class="card-text text-white-50 heading-md">
-                        Ask about Yoora products, pricing, implementation, or anything else.
-                        Our highly trained reps are standing by, ready to help.
+                            </a>
+                        </h1>
+                        <p class="text-white-50 heading-md">
+                            Ask about Yoora products, pricing, implementation, or anything else.
+                            Our highly trained reps are standing by, ready to help.
+                        </p>
                     </div>
                 </div>
-                <div class="card-footer">
-                    <button class="btn btn--chevron">
-                        Try For Free
-                        <img class="btn__icon" src="./img/button__icon.png"
-                            alt="This is the chevron-right icon of the button">
-                    </button>
-                    <span class="heading-sm text-white">Full access. No credit card required.</span>
+                <div class="card-footer ">
+                    <div class="container">
+                        <button class="btn btn--chevron">
+                            Try For Free
+                            <img class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
+                        </button>
+                        <span class="heading-sm text-white">Full access. No credit card required.</span>
+                    </div>
                 </div>
             </div>
     </section>
