Feate : Update footer-about

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -566,24 +566,24 @@
             </div>
 
         </div>
-
+        <hr class="line ">
         <div class="footer-about container">
-            <hr class="line ">
-
-            <div class="footer-rule nav-menu ">
+            <div class="nav-menu ">
                 <ul class="menu-list">
                     <a class="item text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
                     <li class="list-item"><a class="item" href="#">Terms of Service</a></li>
                     <li class="list-item"><a class="item" href="#">Privacy Police</a></li>
                     <li class="list-item"><a class="item" href="#">Cookie</li>
+                    <li class="list-item">
+                        <div class="footer-locale item">
+                            <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn-icon">
+                            <select class="btn--flex" name="language" id="language">
+                                <option value="volvo">English</option>
+                                <option value="saab">Vietnamese</option>
+                            </select>
+                        </div>
+                    </li>
                 </ul>
-                    <div class="footer-locale">
-                        <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn-icon">
-                        <select class="btn--flex" name="language" id="language">
-                            <option value="volvo">English</option>
-                            <option value="saab">Vietnamese</option>
-                        </select>
-                    </div>
             </div>
         </div>
 
