Feate : update cta responsve

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -472,13 +472,11 @@
                     </div>
                 </div>
                 <div class="card-footer ">
-                    <div class="container">
                         <button class="btn btn--chevron">
                             Try For Free
                             <img class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
                         </button>
                         <span class="heading-sm text-white">Full access. No credit card required.</span>
-                    </div>
                 </div>
             </div>
     </section>
@@ -492,7 +490,7 @@
     <!-------------------
     Footer
     --------------------->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer__content container">
             <div class="footer__content-left">
                 <a href="#" class="logo">
@@ -583,7 +581,7 @@
 
         </div>
 
-    </footer>
+    </footer> -->
 
 
 
