Feat : Update cta-responsive

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -432,25 +432,28 @@
     <!-------------------
     CTA section
     --------------------->
-    <section class="cta">
-        <div class="container">
-            <div class="cta__content">
-                <div class="cta__passage">
-                    <p class="cta__title text--white font--large">Ready to supercharge your business?</p>
-                    <p class="cta__text text--white font--medium">
+    <section class="cta ">
+        <div class="cta-content card container">
+            <div class="card-body  ">
+                <div class="card-text ">
+                    <h1 class="heading-lg" href="#">
+                        <a href="#" class="text-white">
+                            Ready to supercharge your business?
+                        </a>
+                    </h1>
+                    <p class="text-white-50 heading-md">
                         Ask about Yoora products, pricing, implementation, or anything else.
-                        <br> Our highly trained reps are standing by, ready to help.
+                        Our highly trained reps are standing by, ready to help.
                     </p>
                 </div>
-                <div class="cta__button">
-                    <button class="btn btn--chevron"> Try For Free
-                        <img class="btn__icon" src="./img/button__icon.png"
-                            alt="This is the chevron-right icon of the button">
-                    </button>
-                    <p class="cta__text text--white font--small">Full access. No credit card required.</p>
-                </div>
             </div>
-
+            <div class="card-footer ">
+                <button class="btn btn--chevron">
+                    Try For Free
+                    <img class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
+                </button>
+                <span class="heading-sm text-white">Full access. No credit card required.</span>
+            </div>
         </div>
     </section>
     <!-------------------
